RESOLVED FIXED173083
Crash inside WebKit::PluginView::getAuthenticationInfo
https://bugs.webkit.org/show_bug.cgi?id=173083
Summary Crash inside WebKit::PluginView::getAuthenticationInfo
Ryosuke Niwa
Reported 2017-06-07 17:59:00 PDT
Add a null pointer check.
Attachments
Fixes the bug (1.74 KB, patch)
2017-06-07 18:48 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2017-06-07 17:59:23 PDT
Ryosuke Niwa
Comment 2 2017-06-07 18:48:00 PDT
Created attachment 312264 [details] Fixes the bug
Chris Dumez
Comment 3 2017-06-07 19:33:13 PDT
Comment on attachment 312264 [details] Fixes the bug r=me
WebKit Commit Bot
Comment 4 2017-06-07 20:10:46 PDT
Comment on attachment 312264 [details] Fixes the bug Clearing flags on attachment: 312264 Committed r217914: <http://trac.webkit.org/changeset/217914>
WebKit Commit Bot
Comment 5 2017-06-07 20:10:48 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 6 2017-06-08 20:16:39 PDT
This is likely a regression from https://trac.webkit.org/changeset/164195.
Darin Adler
Comment 7 2017-06-09 09:59:43 PDT
Comment on attachment 312264 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=312264&action=review > Source/WebKit2/WebProcess/Plugins/PluginView.cpp:1597 > + RefPtr<Document> contentDocument = m_pluginElement->contentDocument(); Why RefPtr? Seems unnecessary if we are just getting a pointer and then immediately dereferencing it.
Ryosuke Niwa
Comment 8 2017-06-09 15:26:25 PDT
Comment on attachment 312264 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=312264&action=review >> Source/WebKit2/WebProcess/Plugins/PluginView.cpp:1597 >> + RefPtr<Document> contentDocument = m_pluginElement->contentDocument(); > > Why RefPtr? Seems unnecessary if we are just getting a pointer and then immediately dereferencing it. Oh yeah, I don't know why I used RefPtr here. Will fix.
Ryosuke Niwa
Comment 9 2017-06-09 22:11:43 PDT
Note You need to log in before you can comment on or make changes to this bug.