Crash inside WebKit::PluginView::getAuthenticationInfo https://bugs.webkit.org/show_bug.cgi?id=173083

Reviewed by Chris Dumez.

Added a null pointer check. The content document may have went away by the time we get there from IPC.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::getAuthenticationInfo):


Canonical link: https://commits.webkit.org/189938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217914 268f45cc-cd09-0410-ab3c-d52691b4dbfc